<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_hoaDonXuat"
        android:name="com.example.app_phone_store_manager_du_an_1.ui.HoaDonXuat.HoaDonXuatFragment"
        android:label="@string/menu_hd_xuat"
        tools:layout="@layout/fragment_hoa_don_xuat" />
    <fragment
        android:id="@+id/nav_hoaDonNhap"
        android:name="com.example.app_phone_store_manager_du_an_1.ui.HoaDonNhap.HoaDonNhapFragment"
        android:label="@string/menu_hd_nhap"
        tools:layout="@layout/fragment_hoa_don_nhap" />
    <fragment
        android:id="@+id/nav_sanPham"
        android:name="com.example.app_phone_store_manager_du_an_1.ui.SanPham.SanPhamFragment"
        android:label="@string/san_pham"
        tools:layout="@layout/fragment_san_pham" />
    <fragment
        android:id="@+id/nav_khachHang"
        android:name="com.example.app_phone_store_manager_du_an_1.ui.KhachHang.KhachHangFragment"
        android:label="@string/khach_hang"
        tools:layout="@layout/fragment_khach_hang" />
    <fragment
        android:id="@+id/nav_doanhThu"
        android:name="com.example.app_phone_store_manager_du_an_1.ui.ThongKe.DoanhThuFragment"
        android:label="@string/doanh_thu"
        tools:layout="@layout/fragment_doanh_thu" />
    <fragment
        android:id="@+id/nav_topSanPham"
        android:name="com.example.app_phone_store_manager_du_an_1.ui.ThongKe.TopSanPhamFragment"
        android:label="@string/menu_top"
        tools:layout="@layout/fragment_top_san_pham" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.app_phone_store_manager_du_an_1.ui.TaiKhoan.TaiKhoanFragment"
        android:label="@string/menu_acc"
        tools:layout="@layout/fragment_tai_khoan" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.app_phone_store_manager_du_an_1.ui.NguoiDung.NguoiDungFragment"
        android:label="@string/menu_about_acc"
        tools:layout="@layout/fragment_nguoi_dung" />
    <fragment
        android:id="@+id/nav_hang"
        android:name="com.example.app_phone_store_manager_du_an_1.ui.Hang.HangFragment"
        android:label="@string/hang"
        tools:layout="@layout/fragment_hang" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.app_phone_store_manager_du_an_1.ui.TrangChu.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.app_phone_store_manager_du_an_1.ui.TrangChu.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
</navigation>