<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgLogoLG"
        android:layout_width="@dimen/logo_with"
        android:layout_height="@dimen/logo_with"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvHeaderLG"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_otomanopeeone"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="@dimen/font_sc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoLG" />

    <TextView
        android:id="@+id/tvHeaderLGSP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_title_sub"
        android:textAlignment="center"
        android:textSize="@dimen/font_sc_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderLG" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderLGSP"
        app:startIconDrawable="@drawable/ic_user">

        <EditText
            android:id="@+id/edUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUser"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_pass">

        <EditText
            android:id="@+id/edPassWorld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/remember"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPass" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/btn_with"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_btn_login"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbRemember"
        tools:textStyle="bold" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="@dimen/btn_with"
        android:layout_height="@dimen/item_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_btn_cancel"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbRemember" />

</androidx.constraintlayout.widget.ConstraintLayout>